[package]
name = "cypherpunk-cli"
version = "0.1.0"
authors = ["tim54000"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.2"
reqwest = "^0.9"
regex = "^1.2"
failure = "^0.1"
rand = "^0.7"
percent-encoding = "^2.1"
sequoia = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", tag = "v0.9.0", optional = true }
gpgme = { version = "^0.9", optional = true}

[features]
default = ["back-gpg"]

back-gpg = []
back-sequoia = ["sequoia"]
back-gpgme = ["gpgme"]