[package]
name = "cypherpunk-cli"
description = "CLI tool to encrypt your messages between different remailers easily"
version = "2.0.0-beta.3"
authors = ["Tim54000"]
edition = "2018"

[dependencies]
structopt = "^0.3"
clap = "^2.33"
failure = "^0.1.6"
tempfile = "^3.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
base64 = "0.11"
rand = "^0.7"
percent-encoding = "^2.1"
# sequoia = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", tag = "v0.9.0", optional = true }
# gpgme = { version = "^0.9", optional = true}

[features]
default = ["back-gpg"]

back-gpg = []
# back-sequoia = ["sequoia"]
# back-gpgme = ["gpgme"]